Make youtube video autoplay

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class='youtube-video'>
   <div class='container'>
     <div class='row justify-content-sm-center'>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/fX6Ptg_t2aQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/fX6Ptg_t2aQ?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
 </div>
