--- a/index.html
+++ b/index.html
@@ -13,3 +13,9 @@ layout: default
 </div>
 
 <h2 class='call-to-action-text'>We should put a call to action here</h2>
+
+<div class='container'>
+  <div class='row justify-content-sm-center'>
+    <img src='images/logo.png'/>
+  </div>
+</div>
