--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ layout: default
 
 <div class='container'>
   <div class='row justify-content-sm-center'>
-    <img src='images/logo.png'/>
+    <img src='images/logo.png' class='logo'/>
   </div>
 </div>
