Configure JS for home page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 ---
 layout: default
 ---
-<div class='youtube-video'>
+<div class='home content'>
   <div class='container'>
     <div class='row justify-content-sm-center'>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/OymHZgyiPc0?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
+</div>
+
+<div class='contact content' style='display: none'>
+  <h2>Contact</h2>
+  <p>Doug DelPidio</p>
+  <p>Email: doug@676fix.org</p>
+  <p>Phone: 856-906-4176</p>
 </div>
