--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@ layout: default
 ---
 <div class='home content'>
   <div class='container'>
-    <div class='row justify-content-sm-center'>
+<!--     <div class='row justify-content-sm-center'>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/OymHZgyiPc0?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div> -->
+  </div>
+  <h3>Information is the currency of democracy</h3>
+  <div class='container'>
+    <div class='row justify-content-sm-center'>
+      <img src='/images/logo.png' class='logo'/>
     </div>
   </div>
 </div>
@@ -14,4 +20,27 @@ layout: default
   <p>Doug DelPidio</p>
   <p>Email: <a href='mailto:doug@676fix.org'>doug@676fix.org</a></p>
   <p>Phone: <a href='tel:856-906-4175'>856-906-4175</a></p>
+</div>
+
+<div class='register content' style='display: none'>
+  <h2>Register</h2>
+  <p>Request to join our Secure Facebook Feed and privately discuss with coworkers issues on the shop floor.</p>
+  <p>Please enter your job title and location in the form below to be enrolled.</p>
+
+  <form>
+  <div class="form-group">
+    <label for="email">Email address</label>
+    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
+  <div class="form-group">
+    <label for="jobTitle">Job Title</label>
+    <input type="text" class="form-control" id="jobTitle" placeholder="Enter job title">
+  </div>
+  <div class="form-group">
+    <label for="location">Location</label>
+    <input type="text" class="form-control" id="location" placeholder="Enter job title">
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 </div>
