--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 <div class='home content'>
   <div class='container'>
-<!--     <div class='row justify-content-sm-center'>
+    <div class='row justify-content-sm-center'>
      <iframe width="560" height="315" src="https://www.youtube.com/embed/OymHZgyiPc0?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    </div> -->
+    </div>
   </div>
   <h3>Information is the currency of democracy</h3>
   <div class='container'>
