Update contact page heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 </div>
 
 <div class='contact content' style='display: none'>
-  <h2>Contact</h2>
+  <h2>Contact Information</h2>
   <p>Doug DelPidio</p>
   <p>Email: <a href='mailto:doug@676fix.org'>doug@676fix.org</a></p>
   <p>Phone: <a href='tel:856-906-4175'>856-906-4175</a></p>
