--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@ layout: default
   <p>Request to join our Secure Facebook Feed and privately discuss with coworkers issues on the shop floor.</p>
   <p>Please enter your job title and location in the form below to be enrolled.</p>
 
-  <form>
+  <form id='facebook-register' action="https://676fix.us17.list-manage.com/subscribe/post" method="POST">
+    <input type='hidden' name='u' value='5467aac859ebb46ad65bb9809'>
+    <input type='hidden' name='id' value='207cbb2cce'>
   <div class="form-group">
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+    <input type="email" name="MERGE0" required='true' class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
   </div>
   <div class="form-group">
     <label for="jobTitle">Job Title</label>
-    <input type="text" class="form-control" id="jobTitle" placeholder="Enter job title">
+    <input type="text" name="MERGE1" required='true' class="form-control" id="jobTitle" placeholder="Enter job title">
   </div>
   <div class="form-group">
     <label for="location">Location</label>
-    <input type="text" class="form-control" id="location" placeholder="Enter job title">
+    <input type="text" name="MERGE2" required='true' class="form-control" id="location" placeholder="Enter job title">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
