--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@ layout: default
 
 <div class='register content' style='display: none'>
   <h2>Register</h2>
-  <p>Request to join our Secure Facebook Feed and privately discuss with coworkers issues on the shop floor.</p>
-  <p>Please enter your job title and location in the form below to be enrolled.</p>
+  <div class='instructions'>
+    <p>Request to join our Secure Facebook Feed and privately discuss with coworkers issues on the shop floor.</p>
+    <p>Please enter your job title and location in the form below to be enrolled.</p>
+  </div>
+
+  <div class='form-error alert alert-danger'>
+    I'm sorry something went wrong. Please try to submit the form again or email your job title and location to <a href='mailto:doug@676fix.org'>doug@676fix.org</a>
+  </div>
+
+  <div class='form-success alert alert-success'>
+    Registration complete! You will receive an invite to join the Facebook group within 48 hours.
+  </div>
 
   <form id='facebook-register' action="https://676fix.us17.list-manage.com/subscribe/post" method="POST">
     <input type='hidden' name='u' value='5467aac859ebb46ad65bb9809'>
@@ -41,7 +51,7 @@ layout: default
   </div>
   <div class="form-group">
     <label for="location">Location</label>
-    <input type="text" name="MERGE2" required='true' class="form-control" id="location" placeholder="Enter job title">
+    <input type="text" name="MERGE2" required='true' class="form-control" id="location" placeholder="Enter job location">
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
