--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <div class='home content'>
-  <div class='container'>
+  <div class='container' id='home-video'>
     <div class='row justify-content-sm-center'>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/OymHZgyiPc0?autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/OymHZgyiPc0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
   <div class='container'>
