--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <div class='home content'>
-  <div class='container' id='home-video'>
+  <div class='container'>
     <div class='row justify-content-sm-center'>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/OymHZgyiPc0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+     <iframe width="560" id='youtube-video' height="315" src="https://www.youtube.com/embed/OymHZgyiPc0?enablejsapi=1" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
     </div>
   </div>
   <div class='container'>
@@ -17,7 +17,6 @@ layout: default
       <img src='/images/logo.png' class='logo'/>
     </div>
   </div>
-  <h2>2018</h2>
 </div>
 
 <div class='contact content' style='display: none'>
