Play sound on simulated click

--- a/index.html
+++ b/index.html
@@ -59,4 +59,6 @@ layout: default
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<div id='playSound'></div>
 </div>
