--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ layout: default
 <div class='home content'>
   <div class='container'>
     <div class='row justify-content-sm-center'>
-     <iframe width="560" id='youtube-video' height="315" src="https://www.youtube.com/embed/OymHZgyiPc0?enablejsapi=1" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
+     <video width="560" height="315" id='video-676fix'><source src="videos/676fix.mp4#t=11" type="video/mp4"></video>
     </div>
+    <button class='video-poster-image'></button>
   </div>
   <div class='container'>
     <div class='row justify-content-sm-center'>
@@ -59,6 +60,5 @@ layout: default
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
-<div id='playSound'></div>
+  <div id='playSound'>Play!</div>
 </div>
