Auto play html5 video muted

--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 layout: default
 ---
 <div class='home content'>
-  <button id='playSound' style='border: solid black 2px'>Play Me</button>
+  <!-- <button id='playSound' style='border: solid black 2px'>Play Me</button> -->
   <div class='container'>
     <div class='row justify-content-sm-center'>
-     <video id='video-676fix'><source src="videos/676fix.mp4#t=11" type="video/mp4"></video>
+     <video id='video-676fix' inline muted autoplay controls><source src="videos/676fix.mp4#t=5" type="video/mp4"></video>
     </div>
-    <button class='video-poster-image'></button>
   </div>
   <div class='container'>
     <div class='row justify-content-sm-center'>
