Fix stewards styling

--- a/pages/shop-stewards.html
+++ b/pages/shop-stewards.html
@@ -14,10 +14,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>John Hughes – Steward</strong></p>
           <p>Pkg Car Driver Metro 1. Teamster 13 years</p>
           <p>Fav Quote “In matters of style, swim with current; in matters of principle, stand like a rock”</p>
@@ -31,10 +31,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Bob Anastasia – Alternate </strong></p>
         </div>
       </div>
@@ -44,10 +44,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Barry Collins- Alternate</strong></p>
         </div>
       </div>
@@ -59,10 +59,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Phil Skotnicki – Steward</strong></p>
         </div>
       </div>
@@ -72,10 +72,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Stan Wileczer – Steward</strong></p>
         </div>
       </div>
@@ -87,10 +87,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Rick Pohlig – Steward </strong></p>
         </div>
       </div>
@@ -100,10 +100,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Mel Young – Steward</strong></p>
         </div>
       </div>
@@ -113,10 +113,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Troy Jurmias – Alternate</strong></p>
         </div>
       </div>
@@ -128,10 +128,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Bill Beamer - Steward</strong></p>
         </div>
       </div>
@@ -141,10 +141,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Darren Cooker - Steward</strong></p>
         </div>
       </div>
@@ -156,23 +156,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/shop-stewards/delpidio-doug.jpg' />
         </div>
-        <div class='col col-sm-9'>
-          <p><strong>Bill Beamer - Steward</strong></p>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class='shop-steward'>
-    <div class='container'>
-      <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/shop-stewards/delpidio-doug.jpg' />
-        </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Doug DelPidio - Steward</strong></p>
           <p>Preload Metro 6. Teamster for 13 years.</p>
           <p>Favorite quote “The Strength of the Wolf is the Pack”</p>
@@ -186,10 +173,26 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
+          <p><strong>Rick Howell- Steward</strong></p>
+          <p>Preload QC. Teamster for 19 years</p>
+          <p>Email: <a href='mailto:Rickhowell54@yahoo.com'>Rickhowell54@yahoo.com</a></p>
+          <p>Phone: <a href='tel:856-472-6802'>856-472-6802</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class='shop-steward'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
+        </div>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Chris Daley- Steward</strong></p>
         </div>
       </div>
@@ -199,10 +202,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Bob Buckley – Alternate</strong></p>
         </div>
       </div>
@@ -212,10 +215,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Steve Rudolph – Alternate</strong></p>
         </div>
       </div>
@@ -227,10 +230,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Bruce Santoferrano – Steward</strong></p>
         </div>
       </div>
@@ -240,10 +243,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Joe Leach – Steward</strong></p>
         </div>
       </div>
@@ -253,10 +256,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Ed Gerety – Steward</strong></p>
         </div>
       </div>
@@ -268,10 +271,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Bernadette Vanore-Gresh – Steward</strong></p>
         </div>
       </div>
@@ -281,10 +284,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Allen Jackson – Steward</strong></p>
         </div>
       </div>
@@ -294,10 +297,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Bob Fini – Alternate</strong></p>
         </div>
       </div>
@@ -309,10 +312,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Steve Gruber-Steward</strong></p>
         </div>
       </div>
@@ -322,10 +325,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Joe Saia-Steward</strong></p>
         </div>
       </div>
@@ -335,10 +338,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Bill Freer-Steward</strong></p>
         </div>
       </div>
@@ -348,10 +351,10 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-sm-3'>
-          <img width='100%' src='/images/no-image-available.png' />
+        <div class='col col-3 col-md-2'>
+          <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-sm-9'>
+        <div class='col col-9 col-md-8 offset-md-2'>
           <p><strong>Roger Thorsen-Alternate</strong></p>
         </div>
       </div>
