Fix more image styling

--- a/pages/shop-stewards.html
+++ b/pages/shop-stewards.html
@@ -14,10 +14,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>John Hughes – Steward</strong></p>
           <p>Pkg Car Driver Metro 1. Teamster 13 years</p>
           <p>Fav Quote “In matters of style, swim with current; in matters of principle, stand like a rock”</p>
@@ -31,10 +33,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Bob Anastasia – Alternate </strong></p>
         </div>
       </div>
@@ -44,10 +48,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Barry Collins- Alternate</strong></p>
         </div>
       </div>
@@ -59,10 +65,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Phil Skotnicki – Steward</strong></p>
         </div>
       </div>
@@ -72,10 +80,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Stan Wileczer – Steward</strong></p>
         </div>
       </div>
@@ -87,10 +97,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Rick Pohlig – Steward </strong></p>
         </div>
       </div>
@@ -100,10 +112,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Mel Young – Steward</strong></p>
         </div>
       </div>
@@ -113,10 +127,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Troy Jurmias – Alternate</strong></p>
         </div>
       </div>
@@ -128,10 +144,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Bill Beamer - Steward</strong></p>
         </div>
       </div>
@@ -141,10 +159,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Darren Cooker - Steward</strong></p>
         </div>
       </div>
@@ -156,10 +176,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/shop-stewards/delpidio-doug.jpg' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/shop-stewards/delpidio-doug.jpg' />
+          </div>
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Doug DelPidio - Steward</strong></p>
           <p>Preload Metro 6. Teamster for 13 years.</p>
           <p>Favorite quote “The Strength of the Wolf is the Pack”</p>
@@ -173,10 +195,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Rick Howell- Steward</strong></p>
           <p>Preload QC. Teamster for 19 years</p>
           <p>Email: <a href='mailto:Rickhowell54@yahoo.com'>Rickhowell54@yahoo.com</a></p>
@@ -189,10 +213,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Chris Daley- Steward</strong></p>
         </div>
       </div>
@@ -202,10 +228,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Bob Buckley – Alternate</strong></p>
         </div>
       </div>
@@ -215,10 +243,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Steve Rudolph – Alternate</strong></p>
         </div>
       </div>
@@ -230,10 +260,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Bruce Santoferrano – Steward</strong></p>
         </div>
       </div>
@@ -243,10 +275,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Joe Leach – Steward</strong></p>
         </div>
       </div>
@@ -256,10 +290,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Ed Gerety – Steward</strong></p>
         </div>
       </div>
@@ -271,10 +307,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Bernadette Vanore-Gresh – Steward</strong></p>
         </div>
       </div>
@@ -284,10 +322,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Allen Jackson – Steward</strong></p>
         </div>
       </div>
@@ -297,10 +337,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Bob Fini – Alternate</strong></p>
         </div>
       </div>
@@ -312,10 +354,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Steve Gruber-Steward</strong></p>
         </div>
       </div>
@@ -325,10 +369,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Joe Saia-Steward</strong></p>
         </div>
       </div>
@@ -338,10 +384,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Bill Freer-Steward</strong></p>
         </div>
       </div>
@@ -351,10 +399,12 @@ layout: default
   <div class='shop-steward'>
     <div class='container'>
       <div class='row'>
-        <div class='col col-3 col-md-2'>
-          <img src='/images/no-image-available.png' />
+        <div class='col col-2'>
+          <div class='image-container'>
+            <img src='/images/no-image-available.png' />
         </div>
-        <div class='col col-9 col-md-8 offset-md-2'>
+        </div>
+        <div class='col col-9 offset-col-1'>
           <p><strong>Roger Thorsen-Alternate</strong></p>
         </div>
       </div>
