Fix typos and muted videos

--- a/pages/voting-info.html
+++ b/pages/voting-info.html
@@ -14,7 +14,7 @@ layout: default
 
   <div class='container'>
     <div class='row justify-content-sm-center'>
-      <video id='video-676fix' inline muted autoplay controls><source src="/videos/charlie-chaplin.mp4" type="video/mp4"></video>
+      <video id='video-676fix' inline autoplay controls><source src="/videos/charlie-chaplin.mp4" type="video/mp4"></video>
     </div>
   </div>
 
