--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
   <!-- <button id='playSound' style='border: solid black 2px'>Play Me</button> -->
   <div class='container'>
     <div class='row justify-content-sm-center'>
-     <video id='video-676fix' inline muted autoplay controls><source src="videos/676fix.mp4#t=5" type="video/mp4"></video>
+     <video id='video-676fix' inline autoplay controls><source src="videos/676fix.mp4#t=5" type="video/mp4"></video>
     </div>
   </div>
   <div class='container'>
